[package]
name = "rust_jwt_auth_with_login_page"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
