[package]
name = "rust_jwt_auth_with_login_page"
version = "0.1.13"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serial_test = "3.2.0"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
